--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,29 @@ permalink: /teaching-reviews/
 author_profile: true
 ---
 
+## Official Cape Breton University Lab Reviews
+
+### PHYS1101L:2 - Elements of Physics I
+
+<object data="/mnt/data/2019_F_PHYS1101L_2_8448_35196.pdf" type="application/pdf" width="100%" height="600px">
+  <p>Your browser does not support PDFs. <a href="/mnt/data/2019_F_PHYS1101L_2_8448_35196.pdf">Download the PDF</a>.</p>
+</object>
+
+### PHYS1101L:4 - Elements of Physics I
+
+<object data="/mnt/data/2019_F_PHYS1101L_4_8448_35196.pdf" type="application/pdf" width="100%" height="600px">
+  <p>Your browser does not support PDFs. <a href="/mnt/data/2019_F_PHYS1101L_4_8448_35196.pdf">Download the PDF</a>.</p>
+</object>
+
+### PHYS1104L:1 - General Physics I
+
+<object data="/mnt/data/2019_F_PHYS1104L_1_8448_35196.pdf" type="application/pdf" width="100%" height="600px">
+  <p>Your browser does not support PDFs. <a href="/mnt/data/2019_F_PHYS1104L_1_8448_35196.pdf">Download the PDF</a>.</p>
+</object>
+
 ## Cabot High Reviews
 
-A number of former students sent me the following letter and reviews, thanking me for my time at Cabot. It is unedited, save for the removal of names, and reproduced here with their kind permission.
+A number of former students sent me the following letter and reviews, thanking me for my time at Cabot. It is unedited, save for the removal of names.
 
 ***
 
