--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -43,7 +43,6 @@ Love,
 
 ***
 
-
 ### Notes from Previous Students
 
 ***: Hi Mike, I miss you a lot.
@@ -56,14 +55,7 @@ Love,
 
 ***: Thank you for putting up with me and ***'s shit, and I know you don’t really like us, but you were our favorite teacher forever, and we love you.
 
-***: To Mike, thank you for being there for me and many others as a teacher and as a friend, as well as being a huge part of my time and success at Cabot. You are an inspiration to me, and it was an absolute honor to have you teach me and help throughout the last two years of my life. Thank you for everything that you have done for me and many others. Love, ***. I leave you with an equation:
-
-$$
-\lim_{{x \to 0}} \frac{{\ln(1-x) - \sin(x)}}{{1 - \cos^2(x)}}
-$$
-
-THIS IS EQUAL TO MEAN GIRLS
-
+***: To Mike, thank you for being there for me and many others as a teacher and as a friend, as well as being a huge part of my time and success at Cabot. You are an inspiration to me, and it was an absolute honor to have you teach me and help throughout the last two years of my life. Thank you for everything that you have done for me and many others. Love, ***.
 
 ### Quick Survey
 
