--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -31,56 +31,56 @@ A number of former students sent me the following letter and reviews, thanking m
 
 ***
 
-Dear Mike,
+<p>Dear Mike,</p>
 
-As we finish up yet another year of school a lot of our time is spent thinking about what our year would’ve been like if we had spent it with you by our side. Losing you as a teacher was one of the hardest things that we have had to deal with so far in our young lives. On a light note, that means that you have made a huge impact on our lives. Mike, you are hands down the most loved teacher that has ever walked the Cabot halls and that is a major accomplishment considering we have had various amazing teachers spend their full careers here. In the year that you spent teaching here, people instantly fell in love with your style of teaching. I always hated science; it was my worst course. Excelling in other courses came easy to me, but I could never seem to get science right. As I began my grade 9 science year, an awkward, nervous young guy walked in with a light smile. From that moment, I knew that this would be the best class of my life. You taught students like no other and have a talent that you should never let go to waste. You made each of your students fall in love with science, and I was one of them. The knowledge that I learned in those 10 months was more than I could have ever imagined, and I will be forever grateful.
+<p>As we finish up yet another year of school a lot of our time is spent thinking about what our year would’ve been like if we had spent it with you by our side. Losing you as a teacher was one of the hardest things that we have had to deal with so far in our young lives. On a light note, that means that you have made a huge impact on our lives. Mike, you are hands down the most loved teacher that has ever walked the Cabot halls and that is a major accomplishment considering we have had various amazing teachers spend their full careers here. In the year that you spent teaching here, people instantly fell in love with your style of teaching. I always hated science; it was my worst course. Excelling in other courses came easy to me, but I could never seem to get science right. As I began my grade 9 science year, an awkward, nervous young guy walked in with a light smile. From that moment, I knew that this would be the best class of my life. You taught students like no other and have a talent that you should never let go to waste. You made each of your students fall in love with science, and I was one of them. The knowledge that I learned in those 10 months was more than I could have ever imagined, and I will be forever grateful.</p>
 
-You often underestimate yourself, and that is something you should never do. Often you would convince yourself that we didn’t learn anything from you. You thought that a lot of our classes were wasted by joking around and having fun. I understand where you were coming from; I mean, how could science be fun? You gained the trust of each and every student and gave us something to look forward to every single day. When we got into the grade 10 physics and chemistry units, *** was in awe of just how ahead each of your students were in those topics. He actually had to find work for your prior students to do while he taught ***'s class the material that we had already been taught by you. None of us can ever repay you for the impact you have had on our lives, and it cannot be put into words. However, I did want to show you just a little token of our appreciation.
+<p>You often underestimate yourself, and that is something you should never do. Often you would convince yourself that we didn’t learn anything from you. You thought that a lot of our classes were wasted by joking around and having fun. I understand where you were coming from; I mean, how could science be fun? You gained the trust of each and every student and gave us something to look forward to every single day. When we got into the grade 10 physics and chemistry units, *** was in awe of just how ahead each of your students were in those topics. He actually had to find work for your prior students to do while he taught ***'s class the material that we had already been taught by you. None of us can ever repay you for the impact you have had on our lives, and it cannot be put into words. However, I did want to show you just a little token of our appreciation.</p>
 
-Mike, thank you for everything that you have and continue to do for us. Can you believe that the class you taught for ONE YEAR has chosen you to be their guest speaker? What an accomplishment. You will forever be a Cabot legend, and we are so proud of you for chasing your dreams. You never disappoint any of us and never will. Congratulations, Mike, and we wish you all the best in your future studies.
+<p>Mike, thank you for everything that you have and continue to do for us. Can you believe that the class you taught for ONE YEAR has chosen you to be their guest speaker? What an accomplishment. You will forever be a Cabot legend, and we are so proud of you for chasing your dreams. You never disappoint any of us and never will. Congratulations, Mike, and we wish you all the best in your future studies.</p>
 
-Love,
+<p>Love,</p>
 
-***
+<p>***</p>
 
 ### Notes from Previous Students
 
-***: Hi Mike, I miss you a lot.
+<p>***: Hi Mike, I miss you a lot.</p>
 
-***: Mike, I know I wasn’t your favorite student at the time or now, but I have changed for the better, and I believe you helped me in a way with that. I am forever thankful for the help that you gave me with math in grade 10, especially with it being the hardest year for math and my mental health. I want you to know that thanks to you, I passed grade 11 math! I hope you’re doing well in school and in general, and I hope you know that you were one of the best teachers I’ve had in all of my school years. Thank you for being patient with me and putting the time in to help me succeed.
+<p>***: Mike, I know I wasn’t your favorite student at the time or now, but I have changed for the better, and I believe you helped me in a way with that. I am forever thankful for the help that you gave me with math in grade 10, especially with it being the hardest year for math and my mental health. I want you to know that thanks to you, I passed grade 11 math! I hope you’re doing well in school and in general, and I hope you know that you were one of the best teachers I’ve had in all of my school years. Thank you for being patient with me and putting the time in to help me succeed.</p>
 
-***: Hey Mike, I hope that you are doing well and having a good time doing whatever you are doing. I wish you the best.
+<p>***: Hey Mike, I hope that you are doing well and having a good time doing whatever you are doing. I wish you the best.</p>
 
-***: Hey Mike, I passed grade 10, which is pretty bussin. Passed the science exam with around a 60 and science in general with around a 51 thanks to you.
+<p>***: Hey Mike, I passed grade 10, which is pretty bussin. Passed the science exam with around a 60 and science in general with around a 51 thanks to you.</p>
 
-***: Thank you for putting up with me and ***'s shit, and I know you don’t really like us, but you were our favorite teacher forever, and we love you.
+<p>***: Thank you for putting up with me and ***'s shit, and I know you don’t really like us, but you were our favorite teacher forever, and we love you.</p>
 
-***: To Mike, thank you for being there for me and many others as a teacher and as a friend, as well as being a huge part of my time and success at Cabot. You are an inspiration to me, and it was an absolute honor to have you teach me and help throughout the last two years of my life. Thank you for everything that you have done for me and many others. Love, ***. I leave you with an equation:
+<p>***: To Mike, thank you for being there for me and many others as a teacher and as a friend, as well as being a huge part of my time and success at Cabot. You are an inspiration to me, and it was an absolute honor to have you teach me and help throughout the last two years of my life. Thank you for everything that you have done for me and many others. Love, ***. I leave you with an equation:</p>
 
 $$
 \lim_{{x \to 0}} \frac{{\ln(1-x) - \sin(x)}}{{1 - \cos^2(x)}}
 $$
 
-THIS IS EQUAL TO MEAN GIRLS
+<p>THIS IS EQUAL TO MEAN GIRLS</p>
 
 ### Quick Survey
 
-We asked 20 of your former students who the most influential teacher they’ve ever had is.
+<p>We asked 20 of your former students who the most influential teacher they’ve ever had is.</p>
 
 - 85% voted Mike Power
 
-We asked 20 of your former students which teacher they have learned most from.
+<p>We asked 20 of your former students which teacher they have learned most from.</p>
 
 - 95% voted Mike Power
 
-We asked 20 of your former students if you could choose any one of our former teachers to be our school principal, who would it be.
+<p>We asked 20 of your former students if you could choose any one of our former teachers to be our school principal, who would it be.</p>
 
 - 95% voted Mike Power
 
-We asked 20 of your former students which 2021-22 school year teacher was their favorite.
+<p>We asked 20 of your former students which 2021-22 school year teacher was their favorite.</p>
 
 - 100% said Mike Power
 
-We asked 20 of your former students which teacher they would never box.
+<p>We asked 20 of your former students which teacher they would never box.</p>
 
 - 100% SAID MIKE POWER
