--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,26 +5,6 @@ permalink: /teaching-reviews/
 author_profile: true
 ---
 
-## Official Cape Breton University Lab Reviews
-
-### PHYS1101L:2 - Elements of Physics I
-
-<object data="/mnt/data/2019_F_PHYS1101L_2_8448_35196.pdf" type="application/pdf" width="100%" height="600px">
-  <p>Your browser does not support PDFs. <a href="/mnt/data/2019_F_PHYS1101L_2_8448_35196.pdf">Download the PDF</a>.</p>
-</object>
-
-### PHYS1101L:4 - Elements of Physics I
-
-<object data="/mnt/data/2019_F_PHYS1101L_4_8448_35196.pdf" type="application/pdf" width="100%" height="600px">
-  <p>Your browser does not support PDFs. <a href="/mnt/data/2019_F_PHYS1101L_4_8448_35196.pdf">Download the PDF</a>.</p>
-</object>
-
-### PHYS1104L:1 - General Physics I
-
-<object data="/mnt/data/2019_F_PHYS1104L_1_8448_35196.pdf" type="application/pdf" width="100%" height="600px">
-  <p>Your browser does not support PDFs. <a href="/mnt/data/2019_F_PHYS1104L_1_8448_35196.pdf">Download the PDF</a>.</p>
-</object>
-
 ## Cabot High Reviews
 
 A number of former students sent me the following letter and reviews, thanking me for my time at Cabot. It is unedited, save for the removal of names.
@@ -43,7 +23,7 @@ A number of former students sent me the following letter and reviews, thanking m
 
 <p>***</p>
 
-### Notes from Previous Students
+<h3>Notes from Previous Students</h3>
 
 <p>***: Hi Mike, I miss you a lot.</p>
 
@@ -55,32 +35,50 @@ A number of former students sent me the following letter and reviews, thanking m
 
 <p>***: Thank you for putting up with me and ***'s shit, and I know you don’t really like us, but you were our favorite teacher forever, and we love you.</p>
 
-<p>***: To Mike, thank you for being there for me and many others as a teacher and as a friend, as well as being a huge part of my time and success at Cabot. You are an inspiration to me, and it was an absolute honor to have you teach me and help throughout the last two years of my life. Thank you for everything that you have done for me and many others. Love, ***. I leave you with an equation:</p>
+<p>***: To Mike, thank you for being there for me and many others as a teacher and as a friend, as well as being a huge part of my time and success at Cabot. You are an inspiration to me, and it was an absolute honor to have you teach me and help throughout the last two years of my life. Thank you for everything that you have done for me and many others. Love, ***.
 
-$$
-\lim_{{x \to 0}} \frac{{\ln(1-x) - \sin(x)}}{{1 - \cos^2(x)}}
-$$
-
-<p>THIS IS EQUAL TO MEAN GIRLS</p>
-
-### Quick Survey
+<h3>Quick Survey</h3>
 
 <p>We asked 20 of your former students who the most influential teacher they’ve ever had is.</p>
 
-- 85% voted Mike Power
+<ul>
+<li>85% voted Mike Power</li>
+</ul>
 
 <p>We asked 20 of your former students which teacher they have learned most from.</p>
 
-- 95% voted Mike Power
+<ul>
+<li>95% voted Mike Power</li>
+</ul>
 
 <p>We asked 20 of your former students if you could choose any one of our former teachers to be our school principal, who would it be.</p>
 
-- 95% voted Mike Power
+<ul>
+<li>95% voted Mike Power</li>
+</ul>
 
 <p>We asked 20 of your former students which 2021-22 school year teacher was their favorite.</p>
 
-- 100% said Mike Power
+<ul>
+<li>100% said Mike Power</li>
+</ul>
 
 <p>We asked 20 of your former students which teacher they would never box.</p>
 
-- 100% SAID MIKE POWER
+<ul>
+<li>100% SAID MIKE POWER</li>
+</ul>
+
+## Official Cape Breton University Lab Reviews
+
+### PHYS1101L:2 - Elements of Physics I
+
+<iframe src="https://drive.google.com/file/d/1L1d41lWvAQdVbCDiz4I6vX_kVx1_D5hA/view?usp=sharing" width="640" height="480"></iframe>
+
+### PHYS1101L:4 - Elements of Physics I
+
+<iframe src="https://drive.google.com/file/d/1aB1h1O4eSlQVwjsWueIWqwL3bZtep_VI/view?usp=sharing" width="640" height="480"></iframe>
+
+### PHYS1104L:1 - General Physics I
+
+<iframe src="https://drive.google.com/file/d/1N4W7XiL2ery1Bsa7SGNZyy18USCKSJij/view?usp=sharing" width="640" height="480"></iframe>
