--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,7 +5,7 @@ permalink: /teaching-reviews/
 author_profile: true
 ---
 
-## Cabot High Reviews
+<h3>Cabot High Reviews</h3>
 
 A number of former students sent me the following letter and reviews, thanking me for my time at Cabot. It is unedited, save for the removal of names.
 
@@ -69,16 +69,16 @@ A number of former students sent me the following letter and reviews, thanking m
 <li>100% SAID MIKE POWER</li>
 </ul>
 
-## Official Cape Breton University Lab Reviews
+<h3>Official Cape Breton University Lab Reviews<h3>
 
-### PHYS1101L:2 - Elements of Physics I
+<h3>PHYS1101L:2 - Elements of Physics I</h3>
 
 <iframe src="https://drive.google.com/file/d/1L1d41lWvAQdVbCDiz4I6vX_kVx1_D5hA/view?usp=sharing" width="640" height="480"></iframe>
 
-### PHYS1101L:4 - Elements of Physics I
+</h3>PHYS1101L:4 - Elements of Physics I</h3>
 
 <iframe src="https://drive.google.com/file/d/1aB1h1O4eSlQVwjsWueIWqwL3bZtep_VI/view?usp=sharing" width="640" height="480"></iframe>
 
-### PHYS1104L:1 - General Physics I
+</h3>PHYS1104L:1 - General Physics I</h3>
 
 <iframe src="https://drive.google.com/file/d/1N4W7XiL2ery1Bsa7SGNZyy18USCKSJij/view?usp=sharing" width="640" height="480"></iframe>
