CV and Teaching Changes

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
+<h3><a href="/assets/Files/Teaching_Assessment.pdf" download>Official Teaching Assessment (PDF)</a></h3>
+
 <h3>Cabot High Reviews</h3>
 
-A number of former students sent me the following letter and reviews, thanking me for my time at Cabot. It is unedited, save for the removal of names.
+A number of former students sent me the following letter and reviews to share, thanking me for my time at Cabot. It is unedited, save for the removal of names.
 
 <p>Dear Mike,</p>
 
