Corrected download links

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -73,12 +73,12 @@ A number of former students sent me the following letter and reviews to share, t
 
 <h3>PHYS1101L:2 - Elements of Physics I</h3>
 
-<iframe src="https://drive.google.com/file/d/1L1d41lWvAQdVbCDiz4I6vX_kVx1_D5hA/view?usp=sharing" width="640" height="480"></iframe>
+<h3><a href="/assets/Files/1101L2.pdf" download>PHYS1101L:2 (PDF)</a></h3>
 
 <h3>PHYS1101L:4 - Elements of Physics I</h3>
 
-<iframe src="https://drive.google.com/file/d/1aB1h1O4eSlQVwjsWueIWqwL3bZtep_VI/view?usp=sharing" width="640" height="480"></iframe>
+<h3><a href="/assets/Files/1101L4.pdf" download>PHYS1101L:4 (PDF)</a></h3>
 
 <h3>PHYS1104L:1 - General Physics I</h3>
 
-<iframe src="https://drive.google.com/file/d/1N4W7XiL2ery1Bsa7SGNZyy18USCKSJij/view?usp=sharing" width="640" height="480"></iframe>
+<h3><a href="/assets/Files/1104L1.pdf" download>PHYS1104L:1 (PDF)</a></h3>
